Add material_symbols_icons package and assets/logo/ and assets/data/ to pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   random_password_generator: ^0.2.1
+  material_symbols_icons: ^4.2719.3
 
 dev_dependencies:
   flutter_test:
@@ -17,4 +18,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  assets:
+    - assets/logo/
+    - assets/data/
   uses-material-design: true
