--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   material_symbols_icons: ^4.2719.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
