--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  go_router: ^13.2.4
+  local_auth: ^2.1.8
   material_symbols_icons: ^4.2719.3
   shared_preferences: ^2.2.3
 
