Refactor import statements, add url_launcher dependency, and update generated plugins for Linux, Windows, and macOS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   local_auth: ^2.1.8
   material_symbols_icons: ^4.2719.3
   shared_preferences: ^2.2.3
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
