--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   material_symbols_icons: ^4.2719.3
   shared_preferences: ^2.2.3
   url_launcher: ^6.2.6
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
