--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.2.3
   url_launcher: ^6.2.6
   encrypt: ^5.0.3
+  file_picker: ^8.0.3
 
 dev_dependencies:
   flutter_test:
