--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   file_picker: ^8.0.3
   flutter_dotenv: ^5.1.0
   crypto: ^3.0.3
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
