Refactor color customization and theme initialization logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ flutter_icons:
   adaptive_icon_foreground: "assets/logo/icon.png"
   android: true
   ios: true
-  adaptive_icon_background: "#1A1C19"
+  adaptive_icon_background: "#0E0E0E"
 
 flutter_native_splash:
   color: "#FCFDF6"
